fix: increase grid background opacity for better visibility

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ h1 {
   background-image: url('/bg.svg');
   background-repeat: repeat;
   background-size: auto;
-  opacity: 0.6;
+  opacity: 0.85;
   position: fixed;
   top: 0;
   left: 0;
